explosión en moñona no estaba bien linkeado. Bugfix para que no se creen scrollbars y no se descuadre la pantalla principal

--- a/css/styles.less
+++ b/css/styles.less
@@ -24,6 +24,7 @@ body {
   height: 100vh;
   margin: 0;
   -webkit-user-select: none;
+  overflow: hidden; /** no scrollbars */
 }
 
 .view {
@@ -405,7 +406,7 @@ button:hover, button.seleccionado {
 }
 
 .fondo-monona .monona-label {
-  background-image: url("http://localhost/assets/img/monona-explosion.png");
+  background-image: url("../assets/img/monona-explosion.png");
   background-size: contain;
   width: 966px;
   height: 768px;
